--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
   </header>
   <div class="inner">
     <div class="inner_box">
+    <p>INTRO</p>
     <img src="images/button.png" alt="창 버튼">
     <div class="intro">
       <p>Hello, I'm <span>Dahyeon</span> <br>
