--- a/project.html
+++ b/project.html
@@ -60,48 +60,61 @@
   </header>
   <div class="inner">
     <div class="inner_box">
+    <p>PROJECT</p>
     <img src="images/button.png" alt="창 버튼">
-    <section class="web">
-        <h1>WEB RENEWAL</h1>
-        <section class="lazy slider" data-sizes="50vw">
-            <div>
-                <div class="flex">
-                    <div class="slide_txt">
-                        <p>01</p>
-                        <h1>남양유업</h1>
-                        <a href="">가이드 보러가기</a>
-                        <a href="https://handha0327.github.io/namyang/">사이트 보러가기</a>
-                    </div>
-                    <img src="images/namyang.jpg">
+    <div id="project_box" class="scroll">
+      <section class="web">
+          <h1>WEB RENEWAL</h1>
+          <section class="lazy slider" data-sizes="50vw">
+              <div>
+                  <div class="flex">
+                      <div class="slide_txt">
+                          <h2>01</h2>
+                          <h1>남양유업</h1>
+                          <a href="">가이드 보러가기</a>
+                          <a href="https://handha0327.github.io/namyang/">사이트 보러가기</a>
+                      </div>
+                      <img src="images/namyang.jpg">
+                  </div>
+              </div>
+              <div>
+                  <div class="flex">
+                      <div class="slide_txt">
+                          <h2>02</h2>
+                          <h1>1537</h1>
+                          <a href="http://handha0327.cafe24.com/">가이드 보러가기</a>
+                          <a href="">사이트 보러가기</a>
+                      </div>
+                      <img src="images/1537.jpg">
+                  </div>
+              </div>
+              <div>
+                  <div class="flex">
+                      <div class="slide_txt">
+                          <h2>03</h2>
+                          <h1>다비치마켓</h1>
+                          <a href="">가이드 보러가기</a>
+                          <a href="">사이트 보러가기</a>
+                      </div>
+                      <img src="images/namyang.jpg" >
+                  </div>
+              </div>
+            </section>
+      </section>
+      <section class="graphic">
+          <h1>GRAPHIC DESIGN</h1>
+          <div class="graphic_img flex">
+            <div class="graphic_left">
+              <div class="graphic_left_img">
+                <div class="graphic_txt">
                 </div>
+                <img src="images/doringdoring.jpg" alt="도링도링 브랜드">
+              </div>
+            <div class="graphic_right">
             </div>
-            <div>
-                <div class="flex">
-                    <div class="slide_txt">
-                        <p>02</p>
-                        <h1>1537</h1>
-                        <a href="http://handha0327.cafe24.com/">가이드 보러가기</a>
-                        <a href="">사이트 보러가기</a>
-                    </div>
-                    <img src="images/1537.jpg">
-                </div>
-            </div>
-            <div>
-                <div class="flex">
-                    <div class="slide_txt">
-                        <p>03</p>
-                        <h1>다비치마켓</h1>
-                        <a href="">가이드 보러가기</a>
-                        <a href="">사이트 보러가기</a>
-                    </div>
-                    <img src="images/namyang.jpg" >
-                </div>
-            </div>
-          </section>
-    </section>
-    <section class="graphic">
-        <h1>GRAPHIC DESIGN</h1>
-    </section>
+          </div>
+      </section>
+    </div>
     </div>
   </div>
 </div>
