--- a/aboutme.html
+++ b/aboutme.html
@@ -52,7 +52,12 @@
     </div>
   </header>
   <div class="inner">
+    <div class="inner_box">
+    <p>ABOUT ME</p>
     <img src="images/button.png" alt="창 버튼">
+    <div class="intro">
+    </div>
+  </div>
   </div>
 </div>
 </body>
