--- a/project.html
+++ b/project.html
@@ -19,6 +19,7 @@
 
 <script src="js/slick.js" type="text/javascript" charset="utf-8"></script>
 <script src="js/slide.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/popup.js" type="text/javascript" charset="utf-8"></script>
 
 
 </head>
@@ -105,14 +106,94 @@
           <h1>GRAPHIC DESIGN</h1>
           <div class="graphic_img flex">
             <div class="graphic_left">
-              <div class="graphic_left_img">
-                <div class="graphic_txt">
-                </div>
-                <img src="images/doringdoring.jpg" alt="도링도링 브랜드">
-              </div>
+                    <a href="#pop_up1" class="modal">
+                      <img src="images/doringdoring.jpg" alt="도링도링">
+                      <div>
+                        <p>DORING DORING</p>
+                        <P>브랜딩</P>
+                      </div>
+                    </a>
+                    <a href="#pop_up3" class="modal">
+                      <img src="images/busan.jpg" alt="부산야경투어 배너">
+                      <div>
+                        <p>별바다부산<br>
+                        야경투어</p>
+                        <p>sns배너</p>
+                      </div>
+                    </a>
+                    <a href="#pop_up5" class="modal">
+                      <img src="images/golf.jpg" alt="하나투어 골프여행">
+                      <div>
+                        <p>하나투어<br>
+                          골프여행 패키지</p>
+                        <p>사이즈별 배너</p>
+                      </div></a>
+                    <a href="#pop_up7" class="modal"><img src="images/sky.jpg" alt="아트웍"></a>
+              </div><!--graphic_left-->
             <div class="graphic_right">
+                <a href="#pop_up2" class="modal"><img src="images/macaroon.jpg" alt="마카롱 이벤트 배너"></a>
+                <a href="#pop_up4" class="modal"><img src="images/grant.jpg" alt="소상공인 재난지원금"></a>
+                <a href="#pop_up6" class="modal"><img src="images/hair.jpg" alt="헤어템 증정"></a>
+                </div><!--graphic_right-->
+          </div><!--graphic_img-->
+          <div id="pop_up1" class="pop">
+            <div class="img">
+              <img src="images/brand_guide.jpg">
+              <img src="images/brand_guide2.jpg">
+              <div class="btn">
+              <button class="close">x</button>
+            </div>
             </div>
           </div>
+          <div id="pop_up2" class="pop">
+            <div class="img">
+              <img src="images/macaroon.jpg" alt="마카롱 이벤트 배너">
+              <div class="btn">
+                <button class="close">x</button>
+              </div>
+            </div>    
+          </div><!--pop_up-->
+          <div id="pop_up3" class="pop">
+            <div class="img">
+              <img src="images/busan.jpg" alt="부산야경투어 배너">
+              <div class="btn">
+                <button class="close">x</button>
+              </div>
+            </div>    
+          </div><!--pop_up-->
+          <div id="pop_up4" class="pop">
+            <div class="img">
+              <img src="images/grant.jpg" alt="소상공인 재난지원금">
+              <div class="btn">
+                <button class="close">x</button>
+              </div>
+            </div>    
+          </div><!--pop_up-->
+          <div id="pop_up5" class="pop">
+            <div class="img">
+              <img src="images/golf.jpg" alt="하나투어 골프여행">
+              <div class="btn">
+                <button class="close">x</button>
+              </div>
+            </div>    
+          </div><!--pop_up-->
+          <div id="pop_up6" class="pop">
+            <div class="img">
+              <img src="images/hair.jpg" alt="헤어템증정">
+              <div class="btn">
+                <button class="close">x</button>
+              </div>
+            </div>    
+          </div><!--pop_up-->
+          <div id="pop_up7" class="pop">
+            <div class="img">
+              <img src="images/sky.jpg" alt="아트웍">
+              <div class="btn">
+                <button class="close">x</button>
+              </div>
+            </div>    
+          </div><!--pop_up-->
+          
       </section>
     </div>
     </div>
