--- a/aboutme.html
+++ b/aboutme.html
@@ -55,7 +55,31 @@
     <div class="inner_box">
     <p>ABOUT ME</p>
     <img src="images/button.png" alt="창 버튼">
-    <div class="intro">
+    <div class="about_me flex">
+      <div class="img">
+        <img src="images/about_me.jpg" alt="본인사진">
+      </div>
+      <div class="txt">
+        <div class="profile">
+          <h3>한다현</h3>
+          <p>1998. 03. 27<br>
+            010-6251-4493 / handha0327@naver.com
+          </p>
+        </div>
+        <div class="skill">
+          <h3>SKILL</h3>
+          <p>html, css, jsQuery, 반응형, Figma<br>
+            Adobe - Photoshop, Illustrator, Premiere pro, After effects<br>
+            한글, 파워포인트, 엑셀
+          </p>
+        </div>
+        <div class="license">
+          <h3>LICENSE</h3>
+          <p>2022.04 웹디자인 필기 합격 (2022년 11월 실기 시험 예정)<br>
+            2021  운전면허증 취득<br>
+            2020 컴퓨터활용능력 2급 취득</p>
+        </div>
+      </div>
     </div>
   </div>
   </div>
