--- a/project.html
+++ b/project.html
@@ -72,7 +72,7 @@
                       <div class="slide_txt">
                           <h2>01</h2>
                           <h1>남양유업</h1>
-                          <a href="">가이드 보러가기</a>
+                          <a href="#">가이드 보러가기</a>
                           <a href="https://handha0327.github.io/namyang/">사이트 보러가기</a>
                       </div>
                       <img src="images/namyang.jpg">
@@ -83,8 +83,8 @@
                       <div class="slide_txt">
                           <h2>02</h2>
                           <h1>1537</h1>
-                          <a href="http://handha0327.cafe24.com/">가이드 보러가기</a>
-                          <a href="">사이트 보러가기</a>
+                          <a href="#">가이드 보러가기</a>
+                          <a href="http://handha0327.cafe24.com/">사이트 보러가기</a>
                       </div>
                       <img src="images/1537.jpg">
                   </div>
@@ -94,8 +94,8 @@
                       <div class="slide_txt">
                           <h2>03</h2>
                           <h1>다비치마켓</h1>
-                          <a href="">가이드 보러가기</a>
-                          <a href="">사이트 보러가기</a>
+                          <a href="#">가이드 보러가기</a>
+                          <a href="#">사이트 보러가기</a>
                       </div>
                       <img src="images/namyang.jpg" >
                   </div>
@@ -109,31 +109,54 @@
                     <a href="#pop_up1" class="modal">
                       <img src="images/doringdoring.jpg" alt="도링도링">
                       <div>
-                        <p>DORING DORING</p>
-                        <P>브랜딩</P>
+                        <p>DORING DORING<br>
+                          <span>브랜딩</span></p>
                       </div>
                     </a>
                     <a href="#pop_up3" class="modal">
                       <img src="images/busan.jpg" alt="부산야경투어 배너">
                       <div>
-                        <p>별바다부산<br>
-                        야경투어</p>
-                        <p>sns배너</p>
+                        <p>부산야경투어<br>
+                          <span>SNS 배너</span></p>
                       </div>
                     </a>
                     <a href="#pop_up5" class="modal">
                       <img src="images/golf.jpg" alt="하나투어 골프여행">
                       <div>
-                        <p>하나투어<br>
-                          골프여행 패키지</p>
-                        <p>사이즈별 배너</p>
-                      </div></a>
-                    <a href="#pop_up7" class="modal"><img src="images/sky.jpg" alt="아트웍"></a>
+                        <p>하나투어 골프여행 패키지<br>
+                          <span>배너</span></p>
+                      </div>
+                    </a>
+                    <a href="#pop_up7" class="modal">
+                      <img src="images/sky.jpg" alt="아트웍">
+                      <div>
+                        <p>하늘<br>
+                          <span>아트웍</span></p>
+                      </div>
+                    </a>
               </div><!--graphic_left-->
             <div class="graphic_right">
-                <a href="#pop_up2" class="modal"><img src="images/macaroon.jpg" alt="마카롱 이벤트 배너"></a>
-                <a href="#pop_up4" class="modal"><img src="images/grant.jpg" alt="소상공인 재난지원금"></a>
-                <a href="#pop_up6" class="modal"><img src="images/hair.jpg" alt="헤어템 증정"></a>
+                <a href="#pop_up2" class="modal">
+                  <img src="images/macaroon.jpg" alt="마카롱 이벤트 배너">
+                  <div>
+                    <p>마카롱 할인 이벤트<br>
+                      <span>배너</span></p>
+                  </div>
+                </a>
+                <a href="#pop_up4" class="modal">
+                  <img src="images/grant.jpg" alt="소상공인 재난지원금">
+                  <div>
+                    <p>소상공인 재난지원금<br>
+                      <span>배너</span></p>
+                  </div>
+                </a>
+                <a href="#pop_up6" class="modal">
+                  <img src="images/hair.jpg" alt="헤어템 증정">
+                  <div>
+                    <p>헤어템 증정 이벤트<br>
+                      <span>배너</span></p>
+                  </div>
+                </a>
                 </div><!--graphic_right-->
           </div><!--graphic_img-->
           <div id="pop_up1" class="pop">
