--- a/project.html
+++ b/project.html
@@ -118,11 +118,18 @@
                           <span>SNS 배너</span></p>
                       </div>
                     </a>
-                    <a href="#pop_up4" class="modal">
-                      <img src="images/grant.jpg" alt="소상공인 재난지원금">
+                    <a href="#pop_up12" class="modal">
+                      <img src="images/1537_page1_main.jpg" alt="1537 상세페이지1">
                       <div>
-                        <p>소상공인 재난지원금<br>
-                          <span>배너</span></p>
+                        <p>1537 상세페이지<br>
+                          <span>상세페이지</span></p>
+                      </div>
+                    </a>
+                    <a href="#pop_up13" class="modal">
+                      <img src="images/1537_page2_main.jpg" alt="1537 상세페이지2">
+                      <div>
+                        <p>1537 상세페이지2<br>
+                          <span>상세페이지</span></p>
                       </div>
                     </a>
               </div><!--graphic_left-->
@@ -131,6 +138,20 @@
                   <img src="images/macaroon.jpg" alt="마카롱 이벤트 배너">
                   <div>
                     <p>마카롱 할인 이벤트<br>
+                      <span>배너</span></p>
+                  </div>
+                </a>
+                <a href="#pop_up8" class="modal">
+                  <img src="images/1537_banner1.jpg" alt="마카롱 이벤트 배너">
+                  <div>
+                    <p>1537 신상품<br>
+                      <span>배너</span></p>
+                  </div>
+                </a>
+                <a href="#pop_up9" class="modal">
+                  <img src="images/1537_banner2.jpg" alt="마카롱 이벤트 배너">
+                  <div>
+                    <p>1537 컬렉션<br>
                       <span>배너</span></p>
                   </div>
                 </a>
@@ -143,10 +164,31 @@
                 </a>
                 </div><!--graphic_right-->
             <div class="graphic_left">
+              <a href="#pop_up10" class="modal">
+                <img src="images/namyang_banner.jpg" alt="남양유업 여름행사 배너">
+                <div>
+                  <p>남양유업 여름 행사<br>
+                    <span>배너</span></p>
+                </div>
+              </a>
               <a href="#pop_up5" class="modal">
                 <img src="images/golf.jpg" alt="하나투어 골프여행">
                 <div>
                   <p>하나투어 골프여행 패키지<br>
+                    <span>배너</span></p>
+                </div>
+              </a>
+              <a href="#pop_up11" class="modal">
+                <img src="images/1537_banner3.jpg" alt="1537행사배너">
+                <div>
+                  <p>1537 행사<br>
+                    <span>배너</span></p>
+                </div>
+              </a>
+              <a href="#pop_up4" class="modal">
+                <img src="images/grant.jpg" alt="소상공인 재난지원금">
+                <div>
+                  <p>소상공인 재난지원금<br>
                     <span>배너</span></p>
                 </div>
               </a>
@@ -211,6 +253,54 @@
           <div id="pop_up7" class="pop">
             <div class="img">
               <img src="images/sky.jpg" alt="아트웍">
+              <div class="btn">
+                <button class="close">x</button>
+              </div>
+            </div>    
+          </div><!--pop_up-->
+          <div id="pop_up8" class="pop">
+            <div class="img">
+              <img src="images/1537_banner1.jpg" alt="1537 신상품 배너">
+              <div class="btn">
+                <button class="close">x</button>
+              </div>
+            </div>    
+          </div><!--pop_up-->
+          <div id="pop_up9" class="pop">
+            <div class="img">
+              <img src="images/1537_banner2.jpg" alt="1537 컬렉션 배너">
+              <div class="btn">
+                <button class="close">x</button>
+              </div>
+            </div>    
+          </div><!--pop_up-->
+          <div id="pop_up10" class="pop">
+            <div class="img">
+              <img src="images/namyang_banner.jpg" alt="남양유업 여름행사 배너">
+              <div class="btn">
+                <button class="close">x</button>
+              </div>
+            </div>    
+          </div><!--pop_up-->
+          <div id="pop_up11" class="pop">
+            <div class="img">
+              <img src="images/1537_banner3.jpg" alt="1537행사배너">
+              <div class="btn">
+                <button class="close">x</button>
+              </div>
+            </div>    
+          </div><!--pop_up-->
+          <div id="pop_up12" class="pop">
+            <div class="img">
+              <img src="images/1537_page1.jpg" alt="1537상세페이지1">
+              <div class="btn">
+                <button class="close">x</button>
+              </div>
+            </div>    
+          </div><!--pop_up-->
+          <div id="pop_up13" class="pop">
+            <div class="img">
+              <img src="images/1537_page2.jpg" alt="1537상세페이지2">
               <div class="btn">
                 <button class="close">x</button>
               </div>
