--- a/index.html
+++ b/index.html
@@ -12,13 +12,18 @@
 <link href="css/common.css" rel="stylesheet" type="text/css">
 <link href="css/style.css" rel="stylesheet" type="text/css">
 <link href="css/index_style.css" rel="stylesheet" type="text/css">
-<!-- <script src="js/jquery-3.1.1.min.js"></script> -->
+
+<script src="js/jquery-3.1.1.min.js"></script>
+<script src="js/jquery-migrate-3.0.0.js"></script>
+
+<script src="js/intro_popup.js" type="text/javascript" charset="utf-8"></script>
 
 </head>
 
 <body >
 <div id="wrap">
   <header id="header">
+    <p>INTRO</p>
     <div class="nav">
       <ul>
         <li>
@@ -51,16 +56,24 @@
   </header>
   <div class="inner">
     <div class="inner_box">
-    <p>INTRO</p>
-    <img src="images/button.png" alt="창 버튼">
     <div class="intro">
       <p>Hello, I'm <span>Dahyeon</span> <br>
       Welcome to my <span>portfolio</span>!</p>
+      <div class="skill">
+        <p>#html #css #jQuery #responsive #Figma <br>
+          #Photoshop #Illustrator #Premierepro #Aftereffects <br>
+          #word #ppt #excel</p>
+      </div>
       <img src='images/star_ring.png' alt="별">
     </div>
   </div>
   </div>
+  <div class="pop_up">
+    <p>현재 저의 포트폴리오는<br>
+      1920*969 사이즈로 보셨을 때 가장 편하고 예쁘게 보실 수 있습니다:-)<br>
+      포트폴리오는 차근차근 채워나가고, 수정하는 중입니다!<br></p>
+    <button>포트폴리오 보러가기</button>
+  </div>
 </div>
 </body>
-
 </html>
