--- a/project.html
+++ b/project.html
@@ -70,8 +70,8 @@
                           <h2>01</h2>
                           <h1>남양유업</h1>
                           <div class="see">
-                            <a href="#none">가이드 보러가기</a>
-                            <a href="https://handha0327.github.io/namyang/">사이트 보러가기</a>
+                            <a href="namyang_guide.html" target="_blank">가이드 보러가기</a>
+                            <a href="https://handha0327.github.io/namyang/" target="_blank">사이트 보러가기</a>
                           </div>  
                       </div>
                       <img src="images/namyang.jpg" alt="남양유업 사이트">
@@ -84,7 +84,7 @@
                           <h1>다비치마켓</h1>
                           <div class="see">
                             <a href="#none">가이드 보러가기</a>
-                            <a href="#none">사이트 보러가기</a>
+                            <a href="https://www.figma.com/proto/g4l8sEuIDJ7FCSOK8mreFP/%EB%8B%A4%EB%B9%84%EC%B9%98%EB%A7%88%EC%BC%93_%EB%A6%AC%EB%89%B4%EC%96%BC?page-id=0%3A1&node-id=42%3A14&viewport=646%2C454%2C0.25&scaling=scale-down&starting-point-node-id=1%3A2&show-proto-sidebar=1" target="_blank">사이트 보러가기</a>
                           </div>  
                       </div>
                       <img src="images/davich.jpg" alt="다비치마켓 모바일 앱">
@@ -97,7 +97,7 @@
                           <h1>1537</h1>
                           <div class="see">
                             <a href="#none">가이드 보러가기</a>
-                            <a href="http://handha0327.cafe24.com/">사이트 보러가기</a>
+                            <a href="http://handha0327.cafe24.com/" target="_blank">사이트 보러가기</a>
                          </div>
                       </div>
                       <img src="images/1537.jpg" alt="1537 사이트 메인">
