--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 </head>
 
-<body >
+<body>
 <div id="wrap">
   <header id="header">
     <p>INTRO</p>
@@ -54,9 +54,10 @@
       </ul>
     </div>
   </header>
-  <div class="inner">
     <div class="inner_box">
+
     <div class="intro">
+      <div class="txt">
       <p>Hello, I'm <span>Dahyeon</span> <br>
       Welcome to my <span>portfolio</span>!</p>
       <div class="skill">
@@ -64,16 +65,19 @@
           #Photoshop #Illustrator #Premierepro #Aftereffects <br>
           #word #ppt #excel</p>
       </div>
+      </div>
       <img src='images/star_ring.png' alt="별">
     </div>
   </div>
-  </div>
-  <div class="pop_up">
+  
+
+
+  <!-- <div class="pop_up">
     <p>현재 저의 포트폴리오는<br>
       1920*969 사이즈로 보셨을 때 가장 편하고 예쁘게 보실 수 있습니다:-)<br>
       포트폴리오는 차근차근 채워나가고, 수정하는 중입니다!<br></p>
     <button>포트폴리오 보러가기</button>
-  </div>
+  </div> -->
 </div>
 </body>
 </html>
