--- a/project.html
+++ b/project.html
@@ -109,13 +109,13 @@
         <h1>GRAPHIC DESIGN</h1>
         <div class="graphic_img flex">
           <div class="graphic_left">
-                  <a href="#pop_up1" class="modal">
+                  <div href="#pop_up1" class="modal">
                     <img src="images/doringdoring.jpg" alt="도링도링">
                     <div>
                       <p>DORING DORING<br>
                         <span>브랜딩</span></p>
                       </div>
-                  </a>
+                  </div>
   
             </div><!--graphic_left-->
 
