--- a/project.html
+++ b/project.html
@@ -314,9 +314,9 @@
         
     </section>
     </div>
-    </div>
-  </div>
-</div>
+    </div><!--innner_box-->
+  </div><!--inner-->
+</div><!--wrap-->
 
 </body>
 
