--- a/project.html
+++ b/project.html
@@ -63,7 +63,7 @@
     <div id="project_box" class="scroll">
       <section id="web">
           <h1>WEB RENEWAL</h1>
-          <section class="lazy slider" data-sizes="50vw">
+          <section class="lazy slider">
               <div>
                   <div class="flex">
                       <div class="slide_txt">
