--- a/davich_guide.html
+++ b/davich_guide.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>한다현_남양유업 리뉴얼 가이드
+    <title>한다현_다비치마켓 리뉴얼 가이드
     </title>
     <link href="css/guide.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <img src="images/namyang_guide.jpg" alt="남양유업 리뉴얼 가이드">
+    <img src="images/davich_guide.jpg" alt="다비치마켓 리뉴얼 가이드">
 </body>
 </html>
