--- a/project.html
+++ b/project.html
@@ -70,7 +70,7 @@
                           <h2>01</h2>
                           <h1>남양유업</h1>
                           <div class="see">
-                            <!--<a href="namyang_guide.html" target="_blank">가이드 보러가기</a>-->
+                            <a href="namyang_guide.html" target="_blank">가이드 보러가기</a>
                             <a href="https://handha0327.github.io/namyang/" target="_blank">사이트 보러가기</a>
                           </div>  
                       </div>
@@ -83,7 +83,7 @@
                           <h2>02</h2>
                           <h1>다비치마켓</h1>
                           <div class="see">
-                            <!--<a href="#none">가이드 보러가기</a>-->
+                            <a href="davich_guide.html" target="_blank">가이드 보러가기</a>
                             <a href="https://www.figma.com/proto/g4l8sEuIDJ7FCSOK8mreFP/%EB%8B%A4%EB%B9%84%EC%B9%98%EB%A7%88%EC%BC%93_%EB%A6%AC%EB%89%B4%EC%96%BC?page-id=0%3A1&node-id=42%3A14&viewport=349%2C520%2C0.13&scaling=scale-down&starting-point-node-id=1%3A2&show-proto-sidebar=1" target="_blank">사이트 보러가기</a>
                           </div>  
                       </div>
